# jwhois

./: .cvsignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  config.l  configure  configure.in  jconfig.c  jconfig.h  jwhois.conf  jwhois.spec.in  jwhoisd.conf  lexer.c  lexer.l  main.c  mkinstalldirs
debian/: changelog  conffiles  control  copyright  dirs  info  postinst  postrm  rules  watch
doc/: .cvsignore  Makefile.am  Makefile.in  jwhois.1  jwhois.texi  rfc1714.txt  rfc2167.txt  rfc954.txt
doc/sv/: Makefile.am  jwhois.1
example/: Makefile.am  jwhois.conf
gl/: Makefile.am
gl/m4/: gnulib-cache.m4  gnulib-comp.m4
include/: cache.h  dns.h  gai_strerror.h  http.h  init.h  jconfig.h  jwhois.h  lookup.h  malloc.h  rwhois.h  utils.h  whois.h
intl/: .cvsignore  Makefile
po/: .cvsignore  ChangeLog  Makevars  POTFILES.in  de.po  eo.po  es.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  jwhois.pot  ka.po  lv.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  rw.po  sr.po  sv.po  tr.po  vi.po  zh_TW.po  zh_cn.po
src/: .cvsignore  Makefile.am  Makefile.in  cache.c  dns.c  gai_strerror.c  getopt.c  getopt1.c  http.c  init.c  jconfig.c  jwhois.c  lexer.c  lexer.l  lookup.c  regex.c  rwhois.c  string.c  utils.c  whois.c
